quick-view-product #1

--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,16 +1,16 @@
 <div class="single-product position-relative">
   <div class="product-thumb position-relative">
-    <a href="">
+    <a>
       <img
         [src]="productItem.images[0]"
         alt=""
         class="primary-image w-100 mw-100" />
       <div class="label-product label-new">Mới</div>
       <div class="actions-link position-absolute text-center w-100">
-        <a href="" class="cart-btn" title="Thêm vào giỏ">
+        <a class="cart-btn" title="Thêm vào giỏ">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
-        <a href="" class="wishlist-btn" title="Thêm vào yêu thích">
+        <a class="wishlist-btn" title="Thêm vào yêu thích">
           <i class="fa-regular fa-heart"></i>
         </a>
         <a
@@ -24,7 +24,7 @@
   </div>
   <div class="product-caption text-center">
     <h4 class="product-name mb-2 text-size-small">
-      <a href="">{{ productItem.name }}</a>
+      <a>{{ productItem.name }}</a>
     </h4>
     <div class="price-box text-size-medium">
       <span class="new-price fw-600">{{ productItem.newPrice }}</span>
