--- a/src/app/components/quick-view-product-modal/quick-view-product-modal.component.scss
+++ b/src/app/components/quick-view-product-modal/quick-view-product-modal.component.scss
@@ -1,20 +1,125 @@
+@import "color";
+@import "text-size";
+
 .mySwiper {
-  position: relative;
-  width: 100% !important;
-  height: 0 !important;
-  padding-bottom: 100% !important;
+  box-sizing: border-box;
+
+  .swiper-slide {
+    opacity: 0.6;
+    border: 1px solid transparent;
+  }
+
+  .swiper-slide-thumb-active {
+    opacity: 1;
+    border-color: $gray-lighter;
+  }
+
+  .image-thumbnail {
+    width: inherit;
+    object-fit: cover;
+    height: inherit;
+    padding-right: 2px;
+  }
 }
 
-.card-image {
-  cursor: pointer;
+.mySwiper2 {
+  border: 1px solid $gray-lighter;
 }
 
-.gallery {
-  position: relative;
+.swiper-slide img {
+  display: block;
+  object-fit: cover;
+}
 
-  .blur-image-mobile {
-    padding-bottom: 100%;
-    background-size: cover;
-    background-position: center;
+.product-rating li {
+  margin-right: 3px;
+  color: $primary-color;
+  font-size: $text-medium;
+
+  i {
+    font-size: $text-large;
+    padding-right: 5px;
+  }
+}
+
+.product-details-view-content {
+  .old-price {
+    color: #777;
+    filter: alpha(opacity = 100);
+    opacity: 1;
+  }
+
+  .single-add-to-cart {
+    max-width: 190px;
+
+    .add-to-cart {
+      background: $primary-color;
+      border: none;
+      color: $white;
+      cursor: pointer;
+      display: inline-block;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: -0.025em;
+      height: 40px;
+      line-height: 40px;
+      padding: 0 5px;
+      text-shadow: none;
+      text-align: center;
+      border-radius: 3px;
+      transition: 0.3s ease;
+      width: 100%;
+    }
+  }
+
+  .cart-plus-minus {
+    margin-right: 15px;
+
+    input {
+      width: 40px;
+      height: 40px;
+      border: 1px solid #ddd;
+      padding: 0 0 0 10px;
+    }
+  }
+
+  .single-add-actions {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ddd;
+
+    li {
+      display: inline-block;
+      margin-right: 15px;
+      font-size: $text-medium;
+    }
+  }
+
+  .stock-cont li {
+    margin-bottom: 2px;
+  }
+
+  .share-product-social-area {
+    margin-top: 20px;
+
+    li {
+      display: inline-block;
+      margin-left: 10px;
+    }
+
+    a {
+      height: 30px;
+      width: 30px;
+      line-height: 30px;
+      background: #f1f1f1;
+      text-align: center;
+      border-radius: 3px;
+      color: #333;
+    }
+  }
+
+  .product-stock-status a {
+    display: inline-block;
   }
 }
