--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "swiper/css/bundle";
 @import "text-size";
+@import "material-icons/iconfont/material-icons.css";
 
 * {
   box-sizing: border-box;
