change project structure & slicing admin #1

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,11 +1,11 @@
 <div class="page-wrapper">
-  <app-header></app-header>
+  <app-client-header></app-client-header>
 
   <main>
     <router-outlet></router-outlet>
   </main>
 
-  <app-footer></app-footer>
+  <app-client-footer></app-client-footer>
 
   <div
     *ngIf="showBackToTop"
