change project structure & slicing admin #2

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,5 +1,4 @@
 <div class="page-wrapper">
-
   <app-admin-header></app-admin-header>
 
   <app-sidebar></app-sidebar>
@@ -9,4 +8,6 @@
       <router-outlet></router-outlet>
     </div>
   </main>
+
+  <app-admin-footer></app-admin-footer>
 </div>
