--- a/src/app/client/components/authentication-modal/authentication-modal.component.scss
+++ b/src/app/client/components/authentication-modal/authentication-modal.component.scss
@@ -55,11 +55,11 @@
 }
 
 .facebook-btn i {
-  color: #4285f4;
+  color: $blue;
 }
 
 .google-btn i {
-  color: #ea4335;
+  color: $red;
 }
 
 .border-bottom {
