--- a/src/app/admin/components/admin-header/admin-header.component.html
+++ b/src/app/admin/components/admin-header/admin-header.component.html
@@ -1,8 +1,44 @@
 <div class="admin-topbar">
   <div class="navbar-header">
-    <div>
+    <div class="cursor-pointer">
       <span class="material-symbols-outlined"> menu </span>
     </div>
-    <div class="d-flex align-items-center">user profile dropdown</div>
+    <div class="dropdown header-item topbar-user" ngbDropdown>
+      <button
+        type="button"
+        class="page-header-user-dropdown px-3"
+        data-bs-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+        ngbDropdownToggle>
+        <span class="d-flex align-items-center">
+          <img
+            class="rounded-circle header-profile-user"
+            src="/assets/images/default/user-default.jpg"
+            alt="Header Avatar" />
+          <span class="text-start ms-xl-2">
+            <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text"
+              >Le Mai Linh</span
+            >
+            <span
+              class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text text-size-x-small"
+              >Founder</span
+            >
+          </span>
+        </span>
+      </button>
+      <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
+        <a
+          class="dropdown-item cursor-pointer"
+          (click)="router.navigate(['/']).then()">
+          <span class="material-symbols-outlined me-2"> support_agent </span>
+          <span class="text-size-small">Client</span>
+        </a>
+        <a class="dropdown-item cursor-pointer" (click)="logout()">
+          <span class="material-symbols-outlined me-2"> logout </span>
+          <span class="text-size-small">Đăng xuất</span>
+        </a>
+      </div>
+    </div>
   </div>
 </div>
