--- a/src/app/client/components/client-header/client-header.component.html
+++ b/src/app/client/components/client-header/client-header.component.html
@@ -111,12 +111,27 @@
                 <button
                   ngbDropdownItem
                   (click)="router.navigate(['/admin']).then()">
-                  Admin
+                  <span class="material-symbols-outlined me-2">
+                    admin_panel_settings
+                  </span>
+                  <span>Admin</span>
                 </button>
-                <button ngbDropdownItem>Thông tin tài khoản</button>
-                <button ngbDropdownItem>Đơn mua</button>
-                <button ngbDropdownItem>Đổi mật khẩu</button>
-                <button ngbDropdownItem>Đăng xuất</button>
+                <button ngbDropdownItem>
+                  <span class="material-symbols-outlined me-2"> person </span>
+                  <span>Thông tin tài khoản</span>
+                </button>
+                <button ngbDropdownItem>
+                  <span class="material-symbols-outlined me-2"> list_alt </span>
+                  <span>Đơn mua</span>
+                </button>
+                <button ngbDropdownItem>
+                  <span class="material-symbols-outlined me-2"> key </span>
+                  <span>Đổi mật khẩu</span>
+                </button>
+                <button ngbDropdownItem>
+                  <span class="material-symbols-outlined me-2"> logout </span>
+                  <span>Đăng xuất</span>
+                </button>
               </div>
             </div>
           </div>
