--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "swiper/css/bundle";
 @import "text-size";
 @import "material-icons/iconfont/material-icons.css";
+@import "color";
 
 * {
   box-sizing: border-box;
@@ -92,4 +93,48 @@ h6 {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.page-title-box {
+  padding: 10px 1.5rem;
+  background-color: $white;
+  box-shadow: 0 1px 2px rgba(56, 65, 74, 0.15);
+  margin: -23px -10px 1.5rem;
+
+  .breadcrumb {
+    background-color: transparent;
+    padding: 0;
+  }
+
+  h4 {
+    font-weight: 700;
+    font-size: 15px !important;
+    text-transform: uppercase;
+  }
+}
+
+.breadcrumb-item {
+  + .breadcrumb-item {
+    &::before {
+      font-family: "Material Design Icons";
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+}
+
+.table > thead {
+  border-color: $gray-300;
+}
+
+.table-nowrap th,
+.table-nowrap td {
+  white-space: nowrap;
+}
+
+.table > :not(caption) > * > * {
+  padding: 0.75rem 0.6rem;
+  background-color: transparent;
+  border-bottom-width: 1px;
+  box-shadow: inset 0 0 0 9999px transparent;
 }
