change project structure & slicing admin #3

--- a/src/app/admin/components/sidebar/sidebar.component.html
+++ b/src/app/admin/components/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
             class="nav-link menu-link cursor-pointer"
             (click)="router.navigate(['/admin/customer-management']).then()">
             <span class="material-symbols-outlined me-2"> support_agent </span>
-            <span class="menu-text">Quản lý khách hàng</span>
+            <span class="menu-text">Quản lý tài khoản</span>
           </a>
         </li>
         <li class="menu-item">
