--- a/src/app/admin/pages/customer-management/customer-management.component.html
+++ b/src/app/admin/pages/customer-management/customer-management.component.html
@@ -23,7 +23,7 @@
           <div class="col-sm-auto justify-content-sm-end">
             <button class="btn btn-success add-btn">
               <i class="fa-solid fa-plus"></i>
-              <span class="text-size-small ms-2">Thêm</span>
+              <span class="ms-2">Thêm</span>
             </button>
           </div>
         </div>
