--- a/src/app/client/components/client-header/client-header.component.html
+++ b/src/app/client/components/client-header/client-header.component.html
@@ -94,8 +94,10 @@
             </div>
 
             <!-- GET THIS IF NOT LOGIN  -->
-            <!-- <div class="profile-wrapper cursor-pointer" (click)="openAuthenicationModal()">
-                <span class="material-symbols-outlined"> person </span>
+            <!-- <div
+              class="profile-wrapper cursor-pointer"
+              (click)="openAuthenicationModal()">
+              <span class="material-symbols-outlined"> person </span>
             </div> -->
 
             <!-- GET THIS IF LOGIN SUCCESSFUL  -->
