--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,3 +138,12 @@ h6 {
   border-bottom-width: 1px;
   box-shadow: inset 0 0 0 9999px transparent;
 }
+
+.btn,
+input {
+  font-size: $text-small;
+}
+
+label {
+  font-weight: 500;
+}
