change project structure & slicing admin #4

--- a/src/app/admin/components/sidebar/sidebar.component.html
+++ b/src/app/admin/components/sidebar/sidebar.component.html
@@ -28,6 +28,16 @@
         <li class="menu-item">
           <a
             class="nav-link menu-link cursor-pointer"
+            (click)="
+              router.navigate(['/admin/product-category-management']).then()
+            ">
+            <span class="material-symbols-outlined me-2"> support_agent </span>
+            <span class="menu-text">Quản lý danh mục</span>
+          </a>
+        </li>
+        <li class="menu-item">
+          <a
+            class="nav-link menu-link cursor-pointer"
             (click)="router.navigate(['/admin/product-management']).then()">
             <span class="material-symbols-outlined me-2"> watch </span>
             <span class="menu-text">Quản lý sản phẩm</span>
