--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,13 @@
 @import "material-icons/iconfont/material-icons.css";
 @import "color";
 
+// regular style toast
+@import "ngx-toastr/toastr";
+
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+
 * {
   box-sizing: border-box;
   padding: 0;
